--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     Please share through a public GitHub repo.
 -->
 
+
+<!--note of author:-->
+
 <html>
     <head>
 
@@ -47,7 +50,4 @@
         </script>
 
     </head>
-    <body>
-        <img src="loading.gif"></img>
-    </body>
 </html>
